WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271506
[macOS] Menu and MenuText system colors are incorrect
https://bugs.webkit.org/show_bug.cgi?id=271506
Summary
[macOS] Menu and MenuText system colors are incorrect
Aditya Keerthi
Reported
2024-03-22 17:56:33 PDT
`Menu` does not adapt to dark mode, and `MenuText` is using the selected item text color.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-22 17:56:49 PDT
<
rdar://problem/125270664
>
Aditya Keerthi
Comment 2
2024-03-22 18:06:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26358
EWS
Comment 3
2024-03-23 12:11:34 PDT
Committed
276597@main
(80d6b8db8ff3): <
https://commits.webkit.org/276597@main
> Reviewed commits have been landed. Closing PR #26358 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug