[macOS] Menu and MenuText system colors are incorrect https://bugs.webkit.org/show_bug.cgi?id=271506 rdar://125270664

Reviewed by Wenson Hsieh.

There are two issues:

1. `MenuText` is using `+[NSColor selectedMenuItemTextColor]`. The system color
   is not about selected items.

2. `Menu` does not adapt to dark mode.

* LayoutTests/platform/mac/imported/w3c/web-platform-tests/css/css-color/system-color-compute-expected.txt:
* Source/WebCore/PAL/pal/spi/mac/NSGraphicsSPI.h:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::menuBackgroundColor):

Adopt `NSDrawMenuBackground` for dark mode support. While this method is
deprecated, the only alternative is to use a custom material, which is not
viable at this time.

(WebCore::RenderThemeMac::systemColor const):

Use `+[NSColor labelColor]` for `MenuText`, which matches the system.

Canonical link: https://commits.webkit.org/276597@main